# multi-omp

./: .gitignore  CMakeLists.txt  README.md  ctpl.h
src/: benchmark.cpp  util.h
